Fix drop zones for list items, and invisible checkbox ticks

--- a/Consoloid/FileList/Dialog/filelist.css
+++ b/Consoloid/FileList/Dialog/filelist.css
@@ -14,7 +14,7 @@ iframe.file.show {
 	min-height: 400px;
 }
 
-.ui.header.checkbox > .drop.zone {
+.ui.checkbox > .drop.zone {
 	position: absolute;
 	z-index: 19;
 }
